# time-series-flu

./: .gitattributes  .gitignore  FORECAST_CONFIG.md  INSTALL.md  README.md  UPDATED_CONFIG_SUMMARY.md  analytical_report.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_forecasts.py
data/: NHSdata_dailypercentace_flupositive.csv  flu_daily_clean.pkl
nb/: 00_env_setup.ipynb  01_data_prep.ipynb  02_roll_loop.ipynb  02b_sarima_optimization.ipynb  02c_lightgbm_optimization.ipynb  02d_tabpfn_with_features.ipynb  03_evaluation.ipynb  04_report.ipynb
results/: dm_tests.csv  summary.csv
results/forecasts/: chronos.parquet  lightgbm.parquet  sarima_fourier.parquet  tabpfn.parquet
